--- a/s_m_exo1.html
+++ b/s_m_exo1.html
@@ -6,7 +6,7 @@
     
 </head>
 <body>
-    <h1>Double de l'entier</h1>
+    <h1>Double de l'entier :</h1>
     <script src="s_M_exo1.js"></script> 
 </body>
 </html>
